scss/core/_layout.scss
@-ms-viewport {
  width: device-width;
}
* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  box-sizing: border-box;
  @include custom-scrollbar();
}

html main,
body main {
  width: 100%;
  margin: auto;
  overflow: hidden;
}
html {
  font-size: 62.5%; // => 10px = 1rem
  scroll-behavior: smooth;
  // overflow: hidden;
}
body {
  width: 100%;
  max-width: var(--container-max-width);
  margin: auto;
  overflow: hidden;
  height: 100vh;
  &.--disable-scrollbar {
    overflow: unset !important;
    height: auto;
  }
  @include text(
    pr,
    var(--fz-h3),
    var(--lh-h3),
    var(--cl-white),
    none,
    none
  ); // tuỳ chỉnh
  background-color: var(--cl-body);
  position: relative;
  .container-fluid {
    position: relative;
    width: 100%;
    padding-right: calc(var(--gap-fluid) / 2);
    padding-left: calc(var(--gap-fluid) / 2);
    margin-right: auto;
    margin-left: auto;
  }
  .container {
    position: relative;
    width: 100%;
    padding-right: calc(var(--gap) / 2);
    padding-left: calc(var(--gap) / 2);
    margin-right: auto;
    margin-left: auto;
  }
  .pd {
    padding: var(--pd-section) 0;
  }
  .pdB {
    padding-bottom: var(--pd-section);
  }
  .pdT {
    padding-top: var(--pd-section);
  }
  .mg {
    margin: var(--mg-section) 0;
  }
  .mgB {
    margin-bottom: var(--mg-section);
  }
  .mgT {
    margin-top: var(--mg-section);
  }

  @media (min-width: $xxs-min) {
    .container {
      max-width: 540px;
    }
  }
  @media (min-width: $xs-min) {
    // .service {
    //   .container {
    //     max-width: 960px;
    //   }
    // }
    .container {
      max-width: 720px;
    }
  }
  @media (min-width: $sm-min) {
    .container {
      max-width: 960px;
    }
  }
  @media (min-width: $md-min) {
    .container {
      max-width: var(--container-width);
    }
    .container-fluid {
      max-width: var(--container-fluid-width);
    }
  }
  .mainwrapper {
    width: 100%;
    margin: auto;
    @include visible;
  }
  @include lg {
    //1599
    // CSS responsive large desktop
  }
  @include md {
    //1199
    // CSS responsive desktop
  }
  @include sm {
    //991
    // CSS responsive tablet
  }
  @include xs {
    //767
    // CSS responsive mobile
  }
  @include xxs {
    //575
    // CSS responsive small mobile
  }
}

